board: Introduce xenguest_arm64 board
Introduce a minimal Xen guest board running as a virtual
machine under Xen Project's hypervisor [1], [2].

Known issues:
 - memory size cannot be less roughly 129M as Xen puts
   the device tree at 0x48000000 and RAM starts 0x40000000
 - getc is not implemented as it requires para-virtualized
   console driver to be implemented
 - no prompt is displayed as puts we use expects "\n" at the
   end to print the string which is not the case with the prompt.

Part of the code is ported from Xen mini-os and also uses
work initially done by different authors from NXP: please see
relevant files for their copyrights.

[1] https://xenbits.xen.org
[2] https://wiki.xenproject.org/

Signed-off-by: Andrii Anisov <andrii_anisov@epam.com>
Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -28,6 +28,10 @@ else
 arch-y += -D__LINUX_ARM_ARCH__=$(CONFIG_SYS_ARM_ARCH)
 endif
 
+ifeq ($(CONFIG_XEN),y)
+arch-y += -D__XEN__
+endif
+
 # Evaluate arch cc-option calls now
 arch-y := $(arch-y)
 
